# code2prompt

./: .c2pconfig  .gitignore  .gnawconfig  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  README_ES.md  build.rs  integration_test.rs  llms-install.md  pyproject.toml  rename_to_gnaw.py
.assets/: flow_diagram.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-mdbook.yml  dispatch-build.yml  documentation.yml  release.yml  website.yml
.opencode/plans/: 2026-06-09-documentation-enhancement.md
crates/: Cargo.toml
crates/code2prompt/: Cargo.toml
crates/code2prompt-cli/: Cargo.toml
crates/code2prompt-cli/src/: args.rs  main.rs
crates/code2prompt-core/: Cargo.toml  build.rs
crates/code2prompt-core/src/: analysis.rs  builtin_templates.rs  configuration.rs  default_template_md.hbs  default_template_xml.hbs  entity_map.rs  filter.rs  git.rs  lib.rs  mod.rs  path.rs  selection.rs  session.rs  sort.rs  template.rs  tokenizer.rs
crates/code2prompt-core/src/file_processor/: default.rs  jsonl.rs  mod.rs
crates/code2prompt-core/templates/: claude-xml.hbs  cryptography-ctf-solver.hbs  find-security-vulnerabilities.hbs  improve-performance.hbs  reverse-engineering-ctf-solver.hbs
crates/code2prompt-core/tests/: analysis.rs  binary_detection_test.rs  file_processor_test.rs  filter_test.rs  git_test.rs  layered_selection_test.rs  path_test.rs  session_integration_test.rs  sort_test.rs  template_test.rs  util_test.rs
crates/code2prompt-python/: Cargo.toml  pyproject.toml
crates/code2prompt-python/python-sdk/: __init__.py
crates/code2prompt-python/src/: lib.rs  python.rs
crates/code2prompt-python/tests/: conftest.py  test_config.py  test_generation.py  test_special_feature.py
crates/code2prompt/src/: args.rs  clipboard.rs  config.rs  config_loader.rs  main.rs  model.rs  token_map.rs  tui.rs  utils.rs  widgets.rs
crates/code2prompt/src/engine/: path.rs
crates/code2prompt/src/model/: cache.rs  commands.rs  event_optimizer.rs  file_tree.rs  messages.rs  mod.rs  prompt_output.rs  session.rs  settings.rs  template.rs
crates/code2prompt/src/model/statistics/: extensions.rs  mod.rs  overview.rs  token_map.rs
crates/code2prompt/src/model/template/: editor.rs  mod.rs  picker.rs  variable.rs
crates/code2prompt/src/view/: formatters.rs  mod.rs  utils.rs
crates/code2prompt/src/widgets/: file_selection.rs  mod.rs  output.rs  settings.rs  statistics_by_extension.rs  statistics_overview.rs  statistics_token_map.rs  template.rs
crates/code2prompt/src/widgets/template/: editor.rs  mod.rs  picker.rs  variable.rs
crates/code2prompt/templates/: write-github-pull-request.hbs
crates/code2prompt/tests/: config_test.rs  git_integration_test.rs  integration_test.rs  sort_test.rs  std_output_test.rs  template_integration_test.rs  template_test.rs
crates/code2prompt/tests/common/: fixtures.rs  mod.rs  test_env.rs
crates/gnaw/: Cargo.toml
crates/gnaw-core/: Cargo.toml
crates/gnaw-core/src/: builtin_templates.rs  compressor.rs  configuration.rs  default_template_md.hbs  git.rs  lib.rs  path.rs  secret_scan.rs  session.rs  sort.rs  template.rs  tokenizer.rs  util.rs
crates/gnaw-core/src/file_processor/: csv.rs  ipynb.rs  tsv.rs
crates/gnaw-core/src/pipeline/: dto.rs  mod.rs  ports.rs  runner.rs
crates/gnaw-core/src/pipeline/adapters/: budgeter.rs  changed_chunker.rs  chunker.rs  counter.rs  mod.rs  ranker.rs  renderer.rs  scrubber.rs  selector.rs  source.rs  tree.rs
crates/gnaw-core/templates/: binary-exploitation-ctf-solver.hbs  chatgpt-md.hbs  claude-xml.hbs  clean-up-code.hbs  cryptography-ctf-solver.hbs  find-security-vulnerabilities.hbs  fix-bugs.hbs  gemini.hbs  git-diff-shas-pipeline.hbs  git-diff-shas.hbs  improve-performance.hbs  refactor.hbs  reverse-engineering-ctf-solver.hbs  write-git-changeset-commits.hbs  write-git-commit.hbs  write-github-pull-request.hbs  write-github-readme.hbs
crates/gnaw-core/tests/: binary_detection_test.rs  file_processor_test.rs  filter_test.rs  git_test.rs  path_test.rs  session_integration_test.rs  sort_test.rs  template_test.rs  util_test.rs
crates/gnaw-ctx/: Cargo.toml
crates/gnaw-ctx/src/: args.rs  banner.rs  clipboard.rs  config.rs  config_loader.rs  main.rs  pipeline_spec.rs  prompt.rs  token_map.rs  tui.rs  utils.rs
crates/gnaw-ctx/src/model/: mod.rs  prompt_output.rs  settings.rs
crates/gnaw-ctx/src/model/statistics/: mod.rs  types.rs
crates/gnaw-ctx/src/model/template/: editor.rs  picker.rs  variable.rs
crates/gnaw-ctx/src/view/: formatters.rs
crates/gnaw-ctx/src/widgets/: file_selection.rs  mod.rs  output.rs  statistics_overview.rs  statistics_token_map.rs
crates/gnaw-ctx/tests/: changed_tree_test.rs  config_test.rs  git_diff_template_test.rs  git_integration_test.rs  secret_scan_test.rs  template_integration_test.rs
crates/gnaw-ctx/tests/common/: fixtures.rs  test_env.rs
crates/gnaw-python/: Cargo.toml  pyproject.toml
crates/gnaw-python/python-sdk/: README.md
crates/gnaw-python/src/: python.rs  (+1 more)
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
python-sdk/: README.md  setup.py
python-sdk/code2prompt_rs/: code2prompt.py
python-sdk/examples/: basic_usage.py
src/: clipboard.rs  default_template.hbs  default_template_md.hbs  default_template_xml.hbs  filter.rs  git.rs  lib.rs  logic.md  main.rs  path.rs  python.rs  sort.rs  template.rs  token.rs
src/bindings/: python.rs
src/engine/: filter.rs  path.rs
templates/: claude-xml.hbs  clean-up-code.hbs  document-the-code.hbs  find-security-vulnerabilities.hbs  web-ctf-solver.hbs  write-github-readme.hbs
tests/: clipboard_test.rs  filter_test.rs  git_test.rs  integration_test.rs  sort_test.rs  template_test.rs  test_filter.rs  util_test.rs
website/: .gitignore  README.md  astro.config.mjs  config.toml  package.json  pnpm-lock.yaml  update-docs.cjs  update-docs.test.cjs
website/content/: _index.md  vision.md
website/public/: CNAME  prism-theme.css
website/sass/: main.scss
website/src/: content.config.ts
website/templates/: base.html  doc.html  index.html  page.html  section.html
(+307 files in other folders)
