[workspace]
resolver = "2"
members = [
    "crates/code2prompt-core",
    "crates/code2prompt",
    "crates/code2prompt-python",
]
default-members = ["crates/code2prompt-core", "crates/code2prompt"]

[profile.release]
lto = "thin"
panic = 'abort'
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.98"
ansi_term = "0.12.1"
arboard = { version = "3.6.0" }
bracoxide = "0.1.6"
colored = "3.0.0"
csv = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
chardetng = { version = "0.1.17" }
clap = { version = "4.5", features = ["derive"] }
content_inspector = "0.2.4"
crossterm = "0.29.0"
dirs = "6.0.0"
derive_builder = { version = "0.20.2" }
env_logger = { version = "0.11.3" }
encoding_rs = { version = "0.8.35" }
indicatif = "0.18.0"
inquire = "0.9.1"
log = "0.4"
lscolors = { version = "0.21.0", features = ["ansi_term"] }
ignore = "0.4.25"
git2 = { version = "0.20.2", default-features = false, features = [
    "https",
    "vendored-libgit2",
    "vendored-openssl",
] }
globset = "0.4.15"
handlebars = "6.3.2"
once_cell = "1.19.0"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py312"] }
ratatui = "0.29.0"
regex = "1.10.3"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.146"
termtree = "0.5"
tiktoken-rs = "0.9.1"
terminal_size = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.9.10"
tui-tree-widget = "0.23.0"
tui-textarea = "0.7"
unicode-width = "0.2.0"
walkdir = "2.4.0"
winapi = { version = "0.3.9", features = ["errhandlingapi"] }
