[workspace]
resolver = "2"
members = [
    "crates/gnaw-core",
    "crates/gnaw-ctx",
    "crates/gnaw-python",
]
default-members = ["crates/gnaw-core", "crates/gnaw-ctx"]

[profile.release]
lto = "thin"
panic = 'abort'
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.102"
ansi_term = "0.12.1"
arboard = { version = "3.6.1" }
bracoxide = "0.1.8"
colored = "3.1.1"
csv = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
chardetng = { version = "1.0.0" }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.5", features = ["unstable-dynamic"] }
content_inspector = "0.2.4"
crossterm = "0.29.0"
dirs = "6.0.0"
derive_builder = { version = "0.20.2" }
env_logger = { version = "0.11.10" }
encoding_rs = { version = "0.8.35" }
indicatif = "0.18.4"
inquire = "0.9.4"
log = "0.4"
lscolors = { version = "0.21.0", features = ["ansi_term"] }
ignore = "0.4.25"
git2 = { version = "0.21.0", default-features = false, features = [
    "https",
    "vendored-libgit2",
    "vendored-openssl",
] }
globset = "0.4.18"
handlebars = "6.4.1"
once_cell = "1.21.4"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
ratatui = "0.30.0"
regex = "1.12.3"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
termtree = "1.0"
tiktoken-rs = "0.12.0"
terminal_size = "0.4.4"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tui-tree-widget = "0.24.0"
ratatui-textarea = "0.9.1"
unicode-width = "0.2.2"
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["errhandlingapi"] }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
