[package]
name = "code2prompt-cli"
version = "3.0.0"
edition = "2021"
description = "Command-line interface for code2prompt"
license = "MIT"
repository = "https://github.com/mufeedvh/code2prompt"

[dependencies]
code2prompt = { path = "../code2prompt" }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"

[[bin]]
name = "code2prompt"
path = "src/main.rs"
