[package]
name = "code2prompt"
version = "3.0.2"
edition = "2021"
description = "Command-line interface for code2prompt"
license = "MIT"
repository = "https://github.com/mufeedvh/code2prompt"

[dependencies]
code2prompt_core = { path = "../code2prompt-core", version = "3.2.0" }
clap = { workspace = true }
env_logger = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
num-format = { workspace = true }
serde_json = { workspace = true }
inquire = { workspace = true }
[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[[bin]]
name = "code2prompt"
path = "src/main.rs"

[dev-dependencies]
git2 = { workspace = true }
tempfile = "3.20"
assert_cmd = "2.0"
predicates = "3.1"
env_logger = "0.11.3"
