[package]
name = "code2prompt"
version = "4.0.0"
edition = "2021"
description = "Command-line interface for code2prompt"
license = "MIT"
repository = "https://github.com/mufeedvh/code2prompt"

[dependencies]
code2prompt_core = { path = "../code2prompt-core", version = "3.4.0" }
clap = { workspace = true }
env_logger = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
num-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inquire = { workspace = true }
terminal_size = { workspace = true }
lscolors = { workspace = true }
ansi_term = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tui-tree-widget = { workspace = true }
tui-textarea = { workspace = true }
atty = { workspace = true }
walkdir = { workspace = true }
unicode-width = { workspace = true }
bracoxide = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }


[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[[bin]]
name = "code2prompt"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.20"
assert_cmd = "2.0"
predicates = "3.1"
env_logger = "0.11.3"
