[package]
name = "gnaw-ctx"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for gnaw"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitbadger-clan/gnaw.git"
readme = "../../README.md"

[features]
default = ["compression"]   # see the recommendation below
wayland = ["arboard/wayland-data-control"]
compression = ["gnaw-core/compression"]
pipeline = ["gnaw-core/pipeline"]

[dependencies]
gnaw-core = { path = "../gnaw-core", version = "0.1.0", features = ["clap"] }
clap = { workspace = true }
clap_complete = { workspace = true }
env_logger = { workspace = true }
arboard = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
inquire = { workspace = true }
terminal_size = { workspace = true }
lscolors = { workspace = true }
ansi_term = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tui-tree-widget = { workspace = true }
ratatui-textarea = { workspace = true }
walkdir = { workspace = true }
unicode-width = { workspace = true }
bracoxide = { workspace = true }
git2 = { workspace = true }
globset = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
handlebars = { workspace = true }
ignore = { workspace = true }
tiktoken-rs = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[[bin]]
name = "gnaw"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27"
assert_cmd = "2.2.2"
predicates = "3.1"
env_logger = "0.11.10"
rstest = "0.26"
